Fix non-square link images being stretched

--- a/public/static/css/app.css
+++ b/public/static/css/app.css
@@ -90,6 +90,9 @@
 .link-img {
     width: 60px;
     height: 60px;
+    display: flex;
+    align-content: center;
+    align-items: center;
 }
 @charset "UTF-8";
 
